--- a/app-web/grails-app/assets/javascripts/app/web/index/templates/about.tpl.html
+++ b/app-web/grails-app/assets/javascripts/app/web/index/templates/about.tpl.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 </section>
-<section style="background-image: url('img/startup.jpg'); " class="section-divider">
+<section style="background-image: url('assets/ux/startup.jpg');" class="section-divider">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
