--- a/app-web/grails-app/assets/javascripts/app/web/index/templates/jobs.tpl.html
+++ b/app-web/grails-app/assets/javascripts/app/web/index/templates/jobs.tpl.html
@@ -44,7 +44,7 @@
                     <div class="col-sm-12 col-md-6">
                         <div class="row">
                             <div class="col-xs-2">
-                                <img style="width: 50px; length: 50px" ng-src="renderLogo?id={{job.publisher.id}}"
+                                <img style="width: 50px; length: 50px" ng-src="{{indexCtrl.contextPath}}/renderLogo?id={{job.publisher.id}}"
                                      alt="{{job.publisher.name}}"
                                      class="img-responsive">
                             </div>
